# snakemake-tutorial

./: Snakefile  config.yaml  pyproject.toml
